--- a/analog_clock/pubspec.yaml
+++ b/analog_clock/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   flutter_clock_helper:
     path: ../flutter_clock_helper
   cupertino_icons: ^0.1.2
+  flare_flutter: ^2.0.1
+  intl: ^0.16.1
+  jiffy: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -18,3 +21,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/clock.flr
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Poppins/Poppins-ExtraBold.ttf
+          weight: 800
